--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   shared_preferences: ^2.1.0
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
+  bloc: ^8.1.4
   flutter_profile_picture: ^2.0.0
   intl: ^0.17.0
   flutter_svg: ^2.0.0+1
