--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,15 +83,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto-Light.ttf
+        # - asset: fonts/helvetica-regular.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: Helvetica
+      fonts:
+        - asset: fonts/helvetica_regular.otf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
